# cs2_map_parser

./: pyproject.toml
example/: parse_all_map.py
example/map_parse/: map_parse.py
src/cs2_map_parser/: __init__.py  map_parser.py  tri_parser.py  vphys_parser.py.old
