[build-system]
    requires = [
        "setuptools>=61.0",
        "wheel>=0.37.0"
    ]
    build-backend = "setuptools.build_meta"

[project]
    name = "cs2_map_parser"
    version = "0.0.1"
    requires-python = ">=3.12"
    dependencies = [
        "binary_reader",
        "keyvalues3",
        "vpk"
    ]

